# requests-html

./: .buildinfo  .pre-commit-config.yaml  README.rst  dev_requirements.in  dev_requirements.txt  genindex.html  httpx_html.py  index.html  objects.inv  py-modindex.html  pyproject.toml  requests_html.py  requirements.in  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  setup_cfg.backup  setup_py.backup  test_requirements.in  test_requirements.txt
_modules/: httpx_html.html  index.html
_modules/httpx/: _client.html
_modules/httpx_html/: parse.html  session.html
_static/: documentation_options.js
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
docs/source/_templates/: hacks.html  sidebarintro.html  sidebarlogo.html
src/httpx_html/: __init__.py  parse.py  parse_.py  session.py
tests/: test_httpx_html.py  test_internet.py
