[tool.ruff]
lint.select = ["E", "F", "B"]
#select = ["E", "F", "I", "PL", "I", "B"]
lint.ignore = []
lint.ignore-init-module-imports = true
lint.unfixable = []
fix = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

line-length = 99

[tool.ruff.lint.mccabe]
max-complexity = 14

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405", "E501"]
"consts.py" = ["E501"]

[tool.black]
line-length = 99
target-version = ['py310', 'py311', 'py312', "py313"]
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
[tool.isort]
profile = "black"
line_length = 99

[project]
name = "httpx-html"
authors = [
    { name = "Kenneth Reitz", email = "me@kennethreitz.org" }
]
maintainers = [
    { name ="Nuno André", email = "mail@nunoand.re" }
]
description = "Web Scraping for Humans."
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]

readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "anyio==4.8.0",
    "appdirs==1.4.4",
    "beautifulsoup4==4.13.3",
    "certifi==2025.1.31",
    "colorama==0.4.6",
    "cssselect==1.2.0",
    "fake-useragent==2.0.3",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "lxml==5.3.1",
    "parse==1.20.2",
    "pyee==11.1.1",
    "pyppeteer==2.0.0",
    "pyquery==2.0.1",
    "rfc3986==2.0.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "urllib3==1.26.20",
    "w3lib==2.3.1",
    "websockets==10.4",
    "zipp==3.21.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://nuno-andre.github.io/httpx-html/"
Repository = "https://github.com/nuno-andre/httpx-html"


[tool.setuptools.dynamic]
version = { attr = "httpx_html.__version__" }

[dependency-groups]
dev = [
    "black==25.1.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "flake8==7.1.1",
    "isort==6.0.0",
    "mccabe==0.7.0",
    "mypy-extensions==1.0.0",
    "mypy==1.15.0",
    "packaging==24.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "pycodestyle==2.12.1",
    "pyflakes==3.2.0",
    "ruff==0.9.6",
    "typing-extensions==4.12.2",
]
test = [
    "aiofiles==24.1.0",
    "anyio==4.8.0",
    "certifi==2025.1.31",
    "colorama==0.4.6",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx-file==0.2.0",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pytest-asyncio==0.25.3",
    "pytest==8.3.4",
    "sniffio==1.3.1",
]
